
Switch to Perl versions of objview and objpict written by Axel Jacobs.

Improved rendering speed of scenes with aliases by not entering new
modifiers into table if they are the same as the previously defined
modifier for that name.

Made it so icalc and rcalc search RAYPATH directories for *.cal files
given on command line.  This simplifies script writing and makes these
utilities consistent with other tools in Radiance.

Added triangulation routine to handle convex polygons in obj2mesh.

****** COMPATIBILITY CHANGE ********
Made backface visibility apply to all material types, including
transparent and translucent materials (except dielectric and interface).
This makes the option useful in cases where adjacent trans surfaces
are placed next to each other by a modeler that only understands
volumetric objects.

Changed dctimestep so that output matrices (-n > 1) are preceded by a
header, and added support for float and double output formats with -o[fd].

Introduced eplus_adduvf program to compute user view factors for EnergyPlus.

Changed image-plane sampling in rpict to use Hilbert curve, which gives
less of a brushed/striped appearance to output pixels with -u- (default).

Added ltview and ltpict Perl scripts contributed by Axel Jacobs, inspired
by Rob Guglielmetti.

Added header variables for NROWS, NCOLS and NCOMP to help standardize
matrix files.  This functionality has been incorporated into
rcollate, gendaymtx, and dctimestep.

Created rmtxop utility to operate on multi-component matrices.  This
facilitates some daylight matrix calculations, and provides a general
tool for manipulating matrix data.

****** COMPATIBILITY CHANGE ********
Introduced new Hessian-based error control in irradiance caching (ambient)
calculation.  Since the format of the stored ambient values is different,
the old files will be rejected with an error message and must be removed.
The programs may be compiled with the -DOLDAMB option if this is a problem.